Fixes header alignment

--- a/src/client/components/article-list/index.css
+++ b/src/client/components/article-list/index.css
@@ -1,7 +1,6 @@
 .root {
   display: flex;
   justify-content: center;
-  margin: 0 20px;
 }
 
 .child {
